# rpi-pico-stuff

pico_lib_test/: CMakeLists.txt
pico_lib_test/example/: CMakeLists.txt  test.c
pico_lib_test/hello_lib/: CMakeLists.txt  hello.c
pico_project_template/: CMakeLists.txt  test.c
rpi_pico_cpp_test/: CMakeLists.txt  main.cpp
testing_sensors/: CMakeLists.txt  hello_wrld.c  main.c  mpu6050_i2c.c
testing_sensors/cpp_test/: CMakeLists.txt  main.cpp
testing_sensors/i2c_scanner/: CMakeLists.txt  scanner.c
testing_sensors/my_mpu6050/: CMakeLists.txt  mpu6050.c
testing_sensors/spin_motor/: CMakeLists.txt  spin_motor.c
testing_sensors/ultrasonic/: CMakeLists.txt  ultra.c
